# openai-threshold

./: .gitignore  Pipfile  README.md  embedings.py  graph_fot_scores_distribution.py  pyproject.toml  speed-test.py
code/: api_manager.py  config.py  database.py  embedding.py  evaluate_all_csvs.py  extract_name.py  graph_for_metric_vs_threshold.py  histogram_companies_vs_cosine_similarity.py  histogram_companies_vs_cosine_similarity_csv.py  speed-test.py  speed_test.py  test.py  threshold-finder.py  threshold_finder.py  utils.py
code/charts/: FileManager.py  evaluate_all_csvs.py  extract_name.py  graph_for_gpt_evaluation_distribution.py
csvs/: freight visibility software-1k.csv  freight visibility software-2k.csv  freight visibility software-3k.csv  freight visibility software-5k.csv  wc
