[tool.poetry]
name = "threshold-searcher"
version = "0.1.0"
description = ""
authors = ["Jahel <jleonro@unal.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.10.0"
pyperclip = "^1.8.2"
pandas = "^2.2.0"
tiktoken = "^0.5.2"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
sshtunnel = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
